Añadí la coneccion a la fake API

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "globals": {
     "document": false,
     "escape": false,
+    "fetch": false,
     "navigator": false,
     "unescape": false,
     "window": false,
