--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
+    "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
@@ -33,6 +35,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
